--- a/templates/opencalgary.html
+++ b/templates/opencalgary.html
@@ -86,6 +86,7 @@
 
       <div class = "container">
         <hr>
+        <p>Select a specific date: </p>
         <div>
           <form name="s-form" method="post">
             <p>Select date: <input type="date" id="singledate" name="single" required ></p>
@@ -96,7 +97,7 @@
         ddddddddd= {{ api_s }}
         #}
         <hr>
-
+        <p> Select a date range: </p>
         <div>
           <form name="stend" method="post">
             <p>Start Date: <input type="date" id="Sdate" name="startdate"></p>
