--- a/templates/opencalgary.html
+++ b/templates/opencalgary.html
@@ -75,7 +75,7 @@
     </button>
       <div class="collapse navbar-collapse" id="Navbar">
         <ul class="navbar-nav mr-auto">
-          <li class="nav-item active"><a class="nav-link" href="C:\Users\zibri\LABS_651\project2\proj2\calgary\templates\opencalgary.html"><span class="fa fa-home fa-lg"></span> Home</a></li>
+          <li class="nav-item active"><a class="nav-link" href="{{ url_for('index') }}"><span class="fa fa-home fa-lg"></span> Home</a></li>
         </ul>
         <h2>Welcome! Find Calgary building permits </h2>
       </div>
