--- a/templates/opencalgary.html
+++ b/templates/opencalgary.html
@@ -22,40 +22,12 @@
           crossorigin=""></script>
        
        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
-       <!--style sheet
-       <link rel="stylesheet" href="C:\Users\zibri\LABS_651\project2\proj2\calgary\templates\navistyle.css"/>
-      -->
-       <style>
-
-         #map { height: 600px;
-        width: 700px;
-    
-    }
-
-    .topnav {
-    overflow: hidden;
-    background-color:rgb(250, 236, 37);
-  }
-  
-  .topnav a {
-    float: left;
-    color: white;
-    text-align: center;
-    padding: 14px 16px;
-    text-decoration: none;
-    font-size: 17px;
-  }
-  
-  .topnav a:hover {
-    background-color: #ddd;
-    color: white;
-  }
-  
-  .topnav a.active {
-    background-color: #e6e5ec;
-    color: black;
-  }
-       </style> 
+       <!--style sheet-->
+       <link rel="stylesheet" href="{{ url_for('static', filename='styles.css') }}">
+      
+              <!--MapBox-->
+              <script src='https://api.mapbox.com/mapbox.js/v3.3.1/mapbox.js'></script>
+              <link href='https://api.mapbox.com/mapbox.js/v3.3.1/mapbox.css' rel='stylesheet' />
 
       <!--OverLappingMarkerSpiderfier-->
        <script src="https://cdnjs.cloudflare.com/ajax/libs/OverlappingMarkerSpiderfier-Leaflet/0.2.6/oms.min.js"></script>
@@ -64,10 +36,12 @@
        <link rel="stylesheet" href="https://unpkg.com/leaflet.markercluster@1.4.1/dist/MarkerCluster.css"/>
        <link rel="stylesheet" href="https://unpkg.com/leaflet.markercluster@1.4.1/dist/MarkerCluster.Default.css"/>
        <script src="https://unpkg.com/leaflet.markercluster@1.4.1/dist/leaflet.markercluster.js"></script>
+
+
        
 
      </head>
-
+    <!--navigation bar-->
      <nav class="navbar navbar-dark navbar-expand-sm topnav">
       <div class="container">
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#Navbar">
@@ -77,7 +51,7 @@
         <ul class="navbar-nav mr-auto">
           <li class="nav-item active"><a class="nav-link" href="{{ url_for('index') }}"><span class="fa fa-home fa-lg"></span> Home</a></li>
         </ul>
-        <h2>Welcome! Find Calgary building permits </h2>
+        <h2>Welcome! Building permits and traffic incidents in Calgary</h2>
       </div>
 
       </div>
@@ -86,10 +60,11 @@
 
      <body>
       <div class = "container">
+        <div id="formss">
         <hr>
         <p>Select a specific date: </p>
         <div>
-          <form name="s-form" method="post">
+          <form name="s-form" method="post" id="form1">
             <p>Select date: <input type="date" id="singledate" name="single" required ></p>
             <input type="submit" value="Submit">
           </form>
@@ -100,22 +75,52 @@
         <hr>
         <p> Select a date range: </p>
         <div>
-          <form name="stend" method="post">
+          <form name="stend" method="post" id="form2">
             <p>Start Date: <input type="date" id="Sdate" name="startdate"></p>
             <p>End Date: <input type="date" id="Edate" name="enddate"></p>
             <input type="submit" value="Submit">
           </form> 
         </div>
+      </div>
         <hr>
+        <!--Toggle button added-->
+        <p>Toggle this button to view a map of Calgary Traffic Inicidents.</p>
+        <label class="switch">
+          <input type="checkbox" id="myButton" onclick="Buttontoggle()">
+          <!--input id="myButton" onclick="Buttontoggle()"-->
+          <span class="slider round"></span>
+        </label>
+        <hr>
+        <!--script>
+          var maplayer;
+          var perm_layer = 'https://api.mapbox.com/styles/v1/{id}/tiles/{z}/{x}/{y}?access_token={accessToken}';
+          var incid_layer = 'https://api.mapbox.com/styles/v1/asiahzibrila/ckzteken8000c14qmcnxyfisy/tiles/{z}/{x}/{y}?access_token={accessToken}';
+
+          function Buttontoggle()
+          {
+            var checkBox = document.getElementById("myButton");
+            
+            if (checkBox.checked == true) {
+              maplayer = perm_layer;
+              } 
+            else {
+              maplayer = incid_layer;
+              }
+              //console.log(maplayer)
+          }
+          console.log(maplayer)
+          </script-->
         {#
         ddddddddd= {{ api_r}}
         #}
-        <div id="map"></div>
-      </div>  
+        <div class="mapclass" id="map"></div>
       <hr>
         <script>
+          
 var map = L.map('map').setView([51.0447, -114.0719], 13);
-L.tileLayer('https://api.mapbox.com/styles/v1/{id}/tiles/{z}/{x}/{y}?access_token={accessToken}', {
+var perm_layer = 'https://api.mapbox.com/styles/v1/{id}/tiles/{z}/{x}/{y}?access_token={accessToken}';
+var incid_layer = 'https://api.mapbox.com/styles/v1/asiahzibrila/ckzteken8000c14qmcnxyfisy/tiles/{z}/{x}/{y}?access_token={accessToken}';
+L.tileLayer(perm_layer, {
     attribution: 'Map data &copy; <a href="https://www.openstreetmap.org/copyright">OpenStreetMap</a> contributors, Imagery © <a href="https://www.mapbox.com/">Mapbox</a>',
     maxZoom: 10,
     id: 'mapbox/streets-v11',
@@ -123,6 +128,45 @@ L.tileLayer('https://api.mapbox.com/styles/v1/{id}/tiles/{z}/{x}/{y}?access_toke
     zoomOffset: -1,
     accessToken: 'pk.eyJ1IjoiYXNpYWh6aWJyaWxhIiwiYSI6ImNremtycDhtZDFjNDYyd3M4empvM3Y4dGsifQ.ld0rWyn00rGQJ16mQBp0FQ'
     }).addTo(map);
+    
+//Function for toggle button
+function Buttontoggle()
+          {
+            var checkBox = document.getElementById("myButton");
+            maplayer = "";
+            if (checkBox.checked == true) {
+              maplayer = incid_layer;
+              L.tileLayer(maplayer, {
+                attribution: 'Map data &copy; <a href="https://www.openstreetmap.org/copyright">OpenStreetMap</a> contributors, Imagery © <a href="https://www.mapbox.com/">Mapbox</a>',
+                maxZoom: 10,
+                id: 'mapbox/streets-v11',
+                tileSize: 512,
+                zoomOffset: -1,
+                accessToken: 'pk.eyJ1IjoiYXNpYWh6aWJyaWxhIiwiYSI6ImNremtycDhtZDFjNDYyd3M4empvM3Y4dGsifQ.ld0rWyn00rGQJ16mQBp0FQ'
+                }).addTo(map);
+
+            //document.getElementById('form1').style.display='none';
+            //document.getElementById('formss').style.display='none';
+              } 
+            else {
+            //document.getElementById('form1').style.display='block';
+            //document.getElementById('formss').style.display='block';
+            maplayer = perm_layer;
+
+
+L.tileLayer(perm_layer, {
+    attribution: 'Map data &copy; <a href="https://www.openstreetmap.org/copyright">OpenStreetMap</a> contributors, Imagery © <a href="https://www.mapbox.com/">Mapbox</a>',
+    maxZoom: 10,
+    id: 'mapbox/streets-v11',
+    tileSize: 512,
+    zoomOffset: -1,
+    accessToken: 'pk.eyJ1IjoiYXNpYWh6aWJyaWxhIiwiYSI6ImNremtycDhtZDFjNDYyd3M4empvM3Y4dGsifQ.ld0rWyn00rGQJ16mQBp0FQ'
+    }).addTo(map);
+
+  }
+          }
+
+  
 
 
     '{% if api_s %}'
@@ -172,7 +216,26 @@ L.tileLayer('https://api.mapbox.com/styles/v1/{id}/tiles/{z}/{x}/{y}?access_toke
 
 }
 
-        </script>
+
+
+L.mapbox.accessToken = 'pk.eyJ1IjoiYXNpYWh6aWJyaWxhIiwiYSI6ImNremtycDhtZDFjNDYyd3M4empvM3Y4dGsifQ.ld0rWyn00rGQJ16mQBp0FQ';
+//var map1 = L.map('map1').setView([51.0447, -114.0719], 10.45);
+var map1 = L.map('map1').setView([51.0447, -114.0719], 13);
+
+// Add tiles from the Mapbox Static Tiles API
+// (https://docs.mapbox.com/api/maps/#static-tiles)
+// Tiles are 512x512 pixels and are offset by 1 zoom level
+L.tileLayer(
+    'https://api.mapbox.com/styles/v1/asiahzibrila/ckzteken8000c14qmcnxyfisy/tiles/{z}/{x}/{y}?access_token={accessToken}', {
+    attribution: 'Map data &copy; <a href="https://www.openstreetmap.org/copyright">OpenStreetMap</a> contributors, Imagery © <a href="https://www.mapbox.com/">Mapbox</a>',
+    maxZoom: 10,
+    id: 'mapbox/streets-v11',
+    tileSize: 512,
+    zoomOffset: -1,
+    accessToken: 'pk.eyJ1IjoiYXNpYWh6aWJyaWxhIiwiYSI6ImNremtycDhtZDFjNDYyd3M4empvM3Y4dGsifQ.ld0rWyn00rGQJ16mQBp0FQ'
+    }).addTo(map1);
+</script>
+
         
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
